prometheus/prometheus-grafana_Ingress_prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 13.0.1-security-01
    helm.sh/chart: grafana-12.4.1
  name: prometheus-grafana
  namespace: prometheus
spec:
  rules:
  - host: graf.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - graf.ocf.berkeley.edu
    secretName: graf-tls
